// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageSourcesNewContainer - sprint 4 to match default snapshot 1`] = `
<body>
  <div>
    <form
      class="h-100"
    >
      <div
        class="d-flex flex-column manage-company h-100"
      >
        <div
          class="d-flex layout-header align-items-center"
        >
          <div>
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/home"
                    >
                      Home
                    </a>
                  </a>
                </li>
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/plans"
                    >
                      Manage Plan
                    </a>
                  </a>
                </li>
              </ol>
            </nav>
            <h5 />
          </div>
          <div
            class="d-flex align-items-center justify-content-center tab-wrapper"
          >
            <div
              class="inner-layout-header nav"
            >
              <a
                href="/manage-plan/sources-master/"
              >
                <span
                  class="nav-link"
                >
                  MASTER
                </span>
              </a>
              <a
                href="/manage-plan/sources-new/"
              >
                <span
                  class="selected nav-link"
                >
                  NEW
                </span>
              </a>
            </div>
          </div>
          <div
            class="ml-auto"
          >
            <div>
              <button
                class="btn btn-secondary"
                flow="add,save"
                type="button"
              >
                Cancel
              </button>
                 
              <button
                class="btn btn-primary"
                flow="add,save"
                type="submit"
              >
                Save
              </button>
                 
            </div>
          </div>
        </div>
        <div
          class="layout-content h-100 overflow-auto"
        >
          <div
            class="d-flex"
          >
            <div
              class="plan-heading"
            >
              Basic Source Information
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div>
                <div
                  class=" md form-group"
                >
                  <label
                    class="form-label"
                  >
                    Source Type
                     
                  </label>
                  <div
                    class="form-control form-button-group "
                  >
                    <div
                      aria-label="Source Type"
                      class="btn-group"
                      name="sourceType"
                      role="group"
                    >
                      <button
                        class="btn btn-primary"
                        data-attr="1"
                        type="button"
                      >
                        Employee
                      </button>
                      <button
                        class="btn btn-primary"
                        data-attr="2"
                        type="button"
                      >
                        Employer
                      </button>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Source Category
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Source Category"
                        class="btn-group"
                        name="sourceCategory"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="1"
                          type="button"
                        >
                          Deferral
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="2"
                          type="button"
                        >
                          Other
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" lg form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Source Sub Category
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Source Sub Category"
                        class="btn-group"
                        name="sourceSubCategory"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="5"
                          type="button"
                        >
                          After Tax Rollover
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="6"
                          type="button"
                        >
                          Pre Tax Rollover
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="7"
                          type="button"
                        >
                          Roth Rollover
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Source Name
                       
                    </label>
                    <input
                      autocomplete="off"
                      class="form-control"
                      label="Source Name"
                      name="sourceName"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Record Keeper Plan Number
                       
                    </label>
                    <input
                      autocomplete="off"
                      class="form-control form-control-sm"
                      label="Record Keeper Plan Number"
                      name="recordKeeperNumber"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Effective Start date
                       
                    </label>
                    <button
                      class="form-control dropSide  dropdown"
                      style="position: relative; display: flex; align-items: center;"
                      type="button"
                    >
                      <select
                        style="visibility: hidden;"
                      >
                        <option
                          value=""
                        >
                          ------select-----
                        </option>
                      </select>
                      <div
                        class="dropSide-custom-select"
                      >
                        Select
                      </div>
                      <span
                        class="dropSide-custom-select-arrow"
                        style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                      >
                        <span
                          style="transform: rotate(90deg);"
                        >
                          &gt;
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Effective End date(optional)
                       
                    </label>
                    <button
                      class="form-control dropSide  dropdown"
                      style="position: relative; display: flex; align-items: center;"
                      type="button"
                    >
                      <select
                        style="visibility: hidden;"
                      >
                        <option
                          value=""
                        >
                          ------select-----
                        </option>
                      </select>
                      <div
                        class="dropSide-custom-select"
                      >
                        Select
                      </div>
                      <span
                        class="dropSide-custom-select-arrow"
                        style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                      >
                        <span
                          style="transform: rotate(90deg);"
                        >
                          &gt;
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      New Contribution Allowed?
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="New Contribution Allowed?"
                        class="btn-group"
                        name="isNewContributionAllowed"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="true"
                          type="button"
                        >
                          Yes
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="false"
                          type="button"
                        >
                          No
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Display source to employee?
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Display source to employee?"
                        class="btn-group"
                        name="shouldDisplaySources"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="true"
                          type="button"
                        >
                          Yes
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="false"
                          type="button"
                        >
                          No
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="line-separator"
              />
              <div
                class="plan-heading"
              >
                Allocation Rules
              </div>
              <div>
                <div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Is Contribution mandatory?
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Is Contribution mandatory?"
                        class="btn-group"
                        name="isContributionMandatory"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="true"
                          type="button"
                        >
                          Yes
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="false"
                          type="button"
                        >
                          No
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Contribution Type
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Contribution Type"
                        class="btn-group"
                        name="contributionType"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="1"
                          type="button"
                        >
                          Percentage
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="2"
                          type="button"
                        >
                          Dollar
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Limit (Minimum)
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        label="Limit (Minimum)"
                        name="maxLimit"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Limit (Maximum)
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        label="Limit (Maximum)"
                        name="minLimit"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Maximum Compensation
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        label="Maximum Compensation"
                        name="maxCompensation"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Deferral percentage for re-hires (optional)
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        label="Deferral percentage for re-hires (optional)"
                        name="deferralPercForRehires"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Contrbution method
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Contrbution method"
                        class="btn-group"
                        name="contributionMethod"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="1"
                          type="button"
                        >
                          Check
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="2"
                          type="button"
                        >
                          Wire
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="3"
                          type="button"
                        >
                          Both
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="d-flex"
                  >
                    <div
                      class=" md form-group"
                    >
                      <label
                        class="form-label"
                      >
                        Allocation percentage for re-hires
                         
                      </label>
                      <div
                        class="form-control form-button-group "
                      >
                        <div
                          aria-label="Allocation percentage for re-hires"
                          class="btn-group"
                          name="allocationPercForRehires"
                          role="group"
                        >
                          <button
                            class="btn btn-primary"
                            data-attr="1"
                            type="button"
                          >
                            Original Allocation Percentage
                          </button>
                          <button
                            class="btn btn-primary"
                            data-attr="2"
                            type="button"
                          >
                            Other
                          </button>
                        </div>
                      </div>
                    </div>
                       
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`ManageSourcesNewContainer - sprint 4 to match snapshot create flow 1`] = `
<body>
  <div>
    <form
      class="h-100"
    >
      <div
        class="d-flex flex-column manage-company h-100"
      >
        <div
          class="d-flex layout-header align-items-center"
        >
          <div>
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/home"
                    >
                      Home
                    </a>
                  </a>
                </li>
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/plans"
                    >
                      Manage Plan
                    </a>
                  </a>
                </li>
              </ol>
            </nav>
            <h5 />
          </div>
          <div
            class="d-flex align-items-center justify-content-center tab-wrapper"
          >
            <div
              class="inner-layout-header nav"
            >
              <a
                href="/manage-plan/sources-master/123456"
              >
                <span
                  class="nav-link"
                >
                  MASTER
                </span>
              </a>
              <a
                href="/manage-plan/sources-new/123456"
              >
                <span
                  class="selected nav-link"
                >
                  NEW
                </span>
              </a>
            </div>
          </div>
          <div
            class="ml-auto"
          >
            <div>
              <button
                class="btn btn-secondary"
                flow="add,save"
                type="button"
              >
                Cancel
              </button>
                 
              <button
                class="btn btn-primary"
                flow="add,save"
                type="submit"
              >
                Save
              </button>
                 
            </div>
          </div>
        </div>
        <div
          class="layout-content h-100 overflow-auto"
        >
          <div
            class="d-flex"
          >
            <div
              class="plan-heading"
            >
              Basic Source Information
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div>
                <div
                  class=" md form-group"
                >
                  <label
                    class="form-label"
                  >
                    Source Type
                     
                  </label>
                  <div
                    class="form-control form-button-group "
                  >
                    <div
                      aria-label="Source Type"
                      class="btn-group"
                      name="sourceType"
                      role="group"
                    >
                      <button
                        class="btn btn-primary"
                        data-attr="1"
                        type="button"
                      >
                        Employee
                      </button>
                      <button
                        class="btn btn-primary"
                        data-attr="2"
                        type="button"
                      >
                        Employer
                      </button>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Source Category
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Source Category"
                        class="btn-group"
                        name="sourceCategory"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="1"
                          type="button"
                        >
                          Deferral
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="2"
                          type="button"
                        >
                          Other
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" lg form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Source Sub Category
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Source Sub Category"
                        class="btn-group"
                        name="sourceSubCategory"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="5"
                          type="button"
                        >
                          After Tax Rollover
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="6"
                          type="button"
                        >
                          Pre Tax Rollover
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="7"
                          type="button"
                        >
                          Roth Rollover
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Source Name
                       
                    </label>
                    <input
                      autocomplete="off"
                      class="form-control"
                      label="Source Name"
                      name="sourceName"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Record Keeper Plan Number
                       
                    </label>
                    <input
                      autocomplete="off"
                      class="form-control form-control-sm"
                      label="Record Keeper Plan Number"
                      name="recordKeeperNumber"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Effective Start date
                       
                    </label>
                    <button
                      class="form-control dropSide  dropdown"
                      style="position: relative; display: flex; align-items: center;"
                      type="button"
                    >
                      <select
                        style="visibility: hidden;"
                      >
                        <option
                          value=""
                        >
                          ------select-----
                        </option>
                      </select>
                      <div
                        class="dropSide-custom-select"
                      >
                        Select
                      </div>
                      <span
                        class="dropSide-custom-select-arrow"
                        style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                      >
                        <span
                          style="transform: rotate(90deg);"
                        >
                          &gt;
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Effective End date(optional)
                       
                    </label>
                    <button
                      class="form-control dropSide  dropdown"
                      style="position: relative; display: flex; align-items: center;"
                      type="button"
                    >
                      <select
                        style="visibility: hidden;"
                      >
                        <option
                          value=""
                        >
                          ------select-----
                        </option>
                      </select>
                      <div
                        class="dropSide-custom-select"
                      >
                        Select
                      </div>
                      <span
                        class="dropSide-custom-select-arrow"
                        style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                      >
                        <span
                          style="transform: rotate(90deg);"
                        >
                          &gt;
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      New Contribution Allowed?
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="New Contribution Allowed?"
                        class="btn-group"
                        name="isNewContributionAllowed"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="true"
                          type="button"
                        >
                          Yes
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="false"
                          type="button"
                        >
                          No
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Display source to employee?
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Display source to employee?"
                        class="btn-group"
                        name="shouldDisplaySources"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="true"
                          type="button"
                        >
                          Yes
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="false"
                          type="button"
                        >
                          No
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="line-separator"
              />
              <div
                class="plan-heading"
              >
                Allocation Rules
              </div>
              <div>
                <div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Is Contribution mandatory?
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Is Contribution mandatory?"
                        class="btn-group"
                        name="isContributionMandatory"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="true"
                          type="button"
                        >
                          Yes
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="false"
                          type="button"
                        >
                          No
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Contribution Type
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Contribution Type"
                        class="btn-group"
                        name="contributionType"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="1"
                          type="button"
                        >
                          Percentage
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="2"
                          type="button"
                        >
                          Dollar
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Limit (Minimum)
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        label="Limit (Minimum)"
                        name="maxLimit"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Limit (Maximum)
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        label="Limit (Maximum)"
                        name="minLimit"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Maximum Compensation
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        label="Maximum Compensation"
                        name="maxCompensation"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Deferral percentage for re-hires (optional)
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        label="Deferral percentage for re-hires (optional)"
                        name="deferralPercForRehires"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Contrbution method
                       
                    </label>
                    <div
                      class="form-control form-button-group "
                    >
                      <div
                        aria-label="Contrbution method"
                        class="btn-group"
                        name="contributionMethod"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="1"
                          type="button"
                        >
                          Check
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="2"
                          type="button"
                        >
                          Wire
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="3"
                          type="button"
                        >
                          Both
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="d-flex"
                  >
                    <div
                      class=" md form-group"
                    >
                      <label
                        class="form-label"
                      >
                        Allocation percentage for re-hires
                         
                      </label>
                      <div
                        class="form-control form-button-group "
                      >
                        <div
                          aria-label="Allocation percentage for re-hires"
                          class="btn-group"
                          name="allocationPercForRehires"
                          role="group"
                        >
                          <button
                            class="btn btn-primary"
                            data-attr="1"
                            type="button"
                          >
                            Original Allocation Percentage
                          </button>
                          <button
                            class="btn btn-primary"
                            data-attr="2"
                            type="button"
                          >
                            Other
                          </button>
                        </div>
                      </div>
                    </div>
                       
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`ManageSourcesNewContainer - sprint 4 to match snapshot edit flow 1`] = `
<body>
  <div>
    <form
      class="h-100"
    >
      <div
        class="d-flex flex-column manage-company h-100"
      >
        <div
          class="d-flex layout-header align-items-center"
        >
          <div>
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/home"
                    >
                      Home
                    </a>
                  </a>
                </li>
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/plans"
                    >
                      Manage Plan
                    </a>
                  </a>
                </li>
              </ol>
            </nav>
            <h5>
              Source
            </h5>
          </div>
          <div
            class="d-flex align-items-center justify-content-center tab-wrapper"
          />
          <div
            class="ml-auto"
          >
            <div>
              <a
                href="/manage-plan/sources-history/edit/123456/654321"
              >
                <button
                  class="color-black f-1rem btn btn-link"
                  flow="edit"
                  link="/manage-plan/sources-history/edit/123456/654321"
                  type="button"
                >
                  History
                </button>
              </a>
                 
              <button
                class="inner-layout-actions btn btn-link"
                flow="edit"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-times fa-w-10 "
                  color="#212529"
                  data-icon="times"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  style="font-size: 1.5rem;"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                    fill="currentColor"
                  />
                </svg>
              </button>
                 
              <button
                class="inner-layout-actions btn btn-link"
                flow="edit"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pencil-alt fa-w-16 "
                  color="#212529"
                  data-icon="pencil-alt"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  style="font-size: 1.5rem;"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M493.255 56.236l-37.49-37.49c-24.993-24.993-65.515-24.994-90.51 0L12.838 371.162.151 485.346c-1.698 15.286 11.22 28.203 26.504 26.504l114.184-12.687 352.417-352.417c24.992-24.994 24.992-65.517-.001-90.51zM164.686 347.313c6.249 6.249 16.379 6.248 22.627 0L368 166.627l30.059 30.059L174 420.745V386h-48v-48H91.255l224.059-224.059L345.373 144 164.686 324.687c-6.249 6.248-6.249 16.378 0 22.626zm-38.539 121.285l-58.995 6.555-30.305-30.305 6.555-58.995L63.255 366H98v48h48v34.745l-19.853 19.853zm344.48-344.48l-49.941 49.941-82.745-82.745 49.941-49.941c12.505-12.505 32.748-12.507 45.255 0l37.49 37.49c12.506 12.506 12.507 32.747 0 45.255z"
                    fill="currentColor"
                  />
                </svg>
              </button>
                 
              <button
                class="inner-layout-actions btn btn-link"
                flow="edit"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-trash-alt fa-w-14 "
                  color="#212529"
                  data-icon="trash-alt"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  style="font-size: 1.5rem;"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M296 432h16a8 8 0 0 0 8-8V152a8 8 0 0 0-8-8h-16a8 8 0 0 0-8 8v272a8 8 0 0 0 8 8zm-160 0h16a8 8 0 0 0 8-8V152a8 8 0 0 0-8-8h-16a8 8 0 0 0-8 8v272a8 8 0 0 0 8 8zM440 64H336l-33.6-44.8A48 48 0 0 0 264 0h-80a48 48 0 0 0-38.4 19.2L112 64H8a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8h24v368a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V96h24a8 8 0 0 0 8-8V72a8 8 0 0 0-8-8zM171.2 38.4A16.1 16.1 0 0 1 184 32h80a16.1 16.1 0 0 1 12.8 6.4L296 64H152zM384 464a16 16 0 0 1-16 16H80a16 16 0 0 1-16-16V96h320zm-168-32h16a8 8 0 0 0 8-8V152a8 8 0 0 0-8-8h-16a8 8 0 0 0-8 8v272a8 8 0 0 0 8 8z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="layout-content h-100 overflow-auto"
        >
          <div
            class="d-flex"
          >
            <div
              class="plan-heading"
            >
              Basic Source Information
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div>
                <div
                  class=" md form-group"
                >
                  <label
                    class="form-label"
                  >
                    Source Type
                     
                  </label>
                  <div
                    class="form-control form-button-group disabled"
                  >
                    <div
                      aria-label="Source Type"
                      class="btn-group"
                      name="sourceType"
                      role="group"
                    >
                      <button
                        class="btn btn-primary"
                        data-attr="1"
                        disabled=""
                        type="button"
                      >
                        Employee
                      </button>
                      <button
                        class="btn btn-primary"
                        data-attr="2"
                        disabled=""
                        type="button"
                      >
                        Employer
                      </button>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Source Category
                       
                    </label>
                    <div
                      class="form-control form-button-group disabled"
                    >
                      <div
                        aria-label="Source Category"
                        class="btn-group"
                        name="sourceCategory"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="1"
                          disabled=""
                          type="button"
                        >
                          Deferral
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="2"
                          disabled=""
                          type="button"
                        >
                          Other
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" lg form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Source Sub Category
                       
                    </label>
                    <div
                      class="form-control form-button-group disabled"
                    >
                      <div
                        aria-label="Source Sub Category"
                        class="btn-group"
                        name="sourceSubCategory"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="5"
                          disabled=""
                          type="button"
                        >
                          After Tax Rollover
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="6"
                          disabled=""
                          type="button"
                        >
                          Pre Tax Rollover
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="7"
                          disabled=""
                          type="button"
                        >
                          Roth Rollover
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Source Name
                       
                    </label>
                    <input
                      autocomplete="off"
                      class="form-control"
                      disabled=""
                      label="Source Name"
                      name="sourceName"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Record Keeper Plan Number
                       
                    </label>
                    <input
                      autocomplete="off"
                      class="form-control form-control-sm"
                      disabled=""
                      label="Record Keeper Plan Number"
                      name="recordKeeperNumber"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Effective Start date
                       
                    </label>
                    <button
                      class="form-control dropSide disabled dropdown"
                      disabled=""
                      style="position: relative; display: flex; align-items: center;"
                      type="button"
                    >
                      <select
                        style="visibility: hidden;"
                      >
                        <option
                          value=""
                        >
                          ------select-----
                        </option>
                      </select>
                      <div
                        class="dropSide-custom-select"
                      >
                        Select
                      </div>
                      <span
                        class="dropSide-custom-select-arrow"
                        disabled=""
                        style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                      >
                        <span
                          style="transform: rotate(90deg);"
                        >
                          &gt;
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Effective End date(optional)
                       
                    </label>
                    <button
                      class="form-control dropSide disabled dropdown"
                      disabled=""
                      style="position: relative; display: flex; align-items: center;"
                      type="button"
                    >
                      <select
                        style="visibility: hidden;"
                      >
                        <option
                          value=""
                        >
                          ------select-----
                        </option>
                      </select>
                      <div
                        class="dropSide-custom-select"
                      >
                        Select
                      </div>
                      <span
                        class="dropSide-custom-select-arrow"
                        disabled=""
                        style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                      >
                        <span
                          style="transform: rotate(90deg);"
                        >
                          &gt;
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      New Contribution Allowed?
                       
                    </label>
                    <div
                      class="form-control form-button-group disabled"
                    >
                      <div
                        aria-label="New Contribution Allowed?"
                        class="btn-group"
                        name="isNewContributionAllowed"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="true"
                          disabled=""
                          type="button"
                        >
                          Yes
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="false"
                          disabled=""
                          type="button"
                        >
                          No
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Display source to employee?
                       
                    </label>
                    <div
                      class="form-control form-button-group disabled"
                    >
                      <div
                        aria-label="Display source to employee?"
                        class="btn-group"
                        name="shouldDisplaySources"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="true"
                          disabled=""
                          type="button"
                        >
                          Yes
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="false"
                          disabled=""
                          type="button"
                        >
                          No
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="line-separator"
              />
              <div
                class="plan-heading"
              >
                Allocation Rules
              </div>
              <div>
                <div>
                  <div
                    class=" sm form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Is Contribution mandatory?
                       
                    </label>
                    <div
                      class="form-control form-button-group disabled"
                    >
                      <div
                        aria-label="Is Contribution mandatory?"
                        class="btn-group"
                        name="isContributionMandatory"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="true"
                          disabled=""
                          type="button"
                        >
                          Yes
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="false"
                          disabled=""
                          type="button"
                        >
                          No
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Contribution Type
                       
                    </label>
                    <div
                      class="form-control form-button-group disabled"
                    >
                      <div
                        aria-label="Contribution Type"
                        class="btn-group"
                        name="contributionType"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="1"
                          disabled=""
                          type="button"
                        >
                          Percentage
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="2"
                          disabled=""
                          type="button"
                        >
                          Dollar
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Limit (Minimum)
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        disabled=""
                        label="Limit (Minimum)"
                        name="maxLimit"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Limit (Maximum)
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        disabled=""
                        label="Limit (Maximum)"
                        name="minLimit"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Maximum Compensation
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        disabled=""
                        label="Maximum Compensation"
                        name="maxCompensation"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" xs form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Deferral percentage for re-hires (optional)
                       
                    </label>
                    <div
                      class="d-flex"
                    >
                      <input
                        autocomplete="off"
                        class="form-control form-control-xs"
                        disabled=""
                        label="Deferral percentage for re-hires (optional)"
                        name="deferralPercForRehires"
                        suggestiondefaulttext="%"
                        type="text"
                        value=""
                      />
                      <span
                        class="suggest-text"
                      >
                        %
                      </span>
                    </div>
                  </div>
                  <div
                    class=" md form-group"
                  >
                    <label
                      class="form-label"
                    >
                      Contrbution method
                       
                    </label>
                    <div
                      class="form-control form-button-group disabled"
                    >
                      <div
                        aria-label="Contrbution method"
                        class="btn-group"
                        name="contributionMethod"
                        role="group"
                      >
                        <button
                          class="btn btn-primary"
                          data-attr="1"
                          disabled=""
                          type="button"
                        >
                          Check
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="2"
                          disabled=""
                          type="button"
                        >
                          Wire
                        </button>
                        <button
                          class="btn btn-primary"
                          data-attr="3"
                          disabled=""
                          type="button"
                        >
                          Both
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="d-flex"
                  >
                    <div
                      class=" md form-group"
                    >
                      <label
                        class="form-label"
                      >
                        Allocation percentage for re-hires
                         
                      </label>
                      <div
                        class="form-control form-button-group disabled"
                      >
                        <div
                          aria-label="Allocation percentage for re-hires"
                          class="btn-group"
                          name="allocationPercForRehires"
                          role="group"
                        >
                          <button
                            class="btn btn-primary"
                            data-attr="1"
                            disabled=""
                            type="button"
                          >
                            Original Allocation Percentage
                          </button>
                          <button
                            class="btn btn-primary"
                            data-attr="2"
                            disabled=""
                            type="button"
                          >
                            Other
                          </button>
                        </div>
                      </div>
                    </div>
                       
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;
